force-app/main/default/objects/ESP_DGX_Registration_Status__c/ESP_DGX_Registration_Status__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : Object to record DGX Registration attempts</description>
    <label>ESP DGX Registration Status</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>DGX Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ESP DGX Registration Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>