force-app/main/default/objects/ESP_DGX_Registration_Status__c/fields/Created_Contact__c.field-meta.xml
<CustomField>
    <fullName>Created_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ESP DGX Registration Status</relationshipLabel>
    <relationshipName>ESP_DGX_Registration_Status</relationshipName>
    <type>Lookup</type>
</CustomField>