force-app/main/default/objects/ESP_DGX_Registration_Status__c/fields/Service_Entitlement_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Entitlement_Number__c</fullName>
    <label>Service Entitlement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>