force-app/main/default/objects/ESP_DGX_Registration_Status__c/fields/Street1__c.field-meta.xml
<CustomField>
    <fullName>Street1__c</fullName>
    <label>Street1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>